# OS-Scheduler

./: .gitignore  CMakeLists.txt  README.md  bench.hpp  fcfs.hpp  gen_data.py  loader.hpp  lottery.hpp  main.cpp  mlfq.hpp  priority.hpp  process.hpp  rr.hpp  sjf.hpp  srtf.hpp  stride.hpp
